added bp tool tip

--- a/bpgraph.html
+++ b/bpgraph.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html>
+	<style> /* set the CSS */
+
+body { font: 12px Arial;}
+
+path { 
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+</style>
   <head>
 	<!--<meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="pragma" content="no-cache" />
@@ -9,38 +28,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<link type="text/css" rel="stylesheet" href="reset.css" media="all"></link>
-	<link type="text/css" rel="stylesheet" href="grid960.css" media="all"></link>
-	<style type="text/css">
-		path {
-		    stroke: steelblue;
-		    stroke-width: 2;
-		    fill: none;
-		}
 
-		line {
-		    stroke: black;
-		}
-
-		text {
-		    font-family: Arial;
-		    font-size: 9pt;
-		}
-	</style>
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-7015427-2']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-
-	</script>
+<bod></bod>
+<bo>
+	
+</bo>
   </head>
-  <body>
+  <bopdy>
   	<script type="text/javascript" src="https://cdn.rawgit.com/smart-on-fhir/client-js/v0.1.1/dist/fhir-client.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript" src="/fhir.js"></script>
