--- a/vitals.html
+++ b/vitals.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <title>Hello...</title>
 <style type="text/css">
 #mainContent {
@@ -66,7 +67,7 @@ Emergency Contact:
 </div>
 <div class=container>
 <h3 class=>My Vitals</h3>
-<div class="list-group" href="#" id="vital_list"></div>
+<div class="list-group" href="#" id="vitals_list"></div>
 </div>
 <script> 
 var myButton = document.getElementById("clickButton");
@@ -81,6 +82,8 @@ function doSomething() {
 <script type="text/javascript" src="https://cdn.rawgit.com/smart-on-fhir/client-js/v0.1.1/dist/fhir-client.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript" src="/fhir.js"></script>
-
+<bod>
+	
+</bod>
 </body>
 </html>
